--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
 
+  <script src="//js.pusher.com/2.2/pusher.min.js" type="text/javascript"></script>
+  
   <%= csrf_meta_tags %>
 </head>
 <body>
